--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ const featuredTools = [
 					{tool.subcategory} - {tool.level}
 				</div>
 				{tool.category === 'reference' && (
-					<div class="inline-block mt-2 px-2 py-1 text-xs rounded bg-blue-900/30 text-blue-300">
+					<div class="inline-block mt-2 px-2 py-1 text-xs rounded panel-blue panel-blue-text">
 						Reference
 					</div>
 				)}
